Add learning plane, promotion, and summaries

--- a/wiki/audit/2026-02-15_audit.md
+++ b/wiki/audit/2026-02-15_audit.md
@@ -84,7 +84,7 @@ Cannot open netlink socket: Operation not permitted
 ### Workspace Directories
 
 ```
-2:vizion-agent-builder
+2:vizion-onboarding
 3:vizion-alert-reporting
 4:vizion-analytics
 5:vizion-maintenance
@@ -97,8 +97,8 @@ Cannot open netlink socket: Operation not permitted
 ### Workspace Git State
 
 ```
-== vizion-agent-builder ==
-remote=git@github.com:VizionCorpAI/vizion-agent-builder.git
+== vizion-onboarding ==
+remote=git@github.com:VizionCorpAI/vizion-onboarding.git
 branch=main
 dirty=1
 
@@ -149,7 +149,7 @@ workspace_key,agent_key,repo_name,repo_path,repo_remote,workflow_namespace,db_na
 trading,trading,vizion-trading,/root/VizionAI/WORKSPACES/vizion-trading,git@github.com:VizionCorpAI/vizion-trading.git,trading,AIDB,public,trade_,active
 scheduling,scheduling,vizion-scheduling,/root/VizionAI/WORKSPACES/vizion-scheduling,git@github.com:VizionCorpAI/vizion-scheduling.git,scheduling,AIDB,public,sched_,active
 marketing,marketing,vizion-marketing,/root/VizionAI/WORKSPACES/vizion-marketing,git@github.com:VizionCorpAI/vizion-marketing.git,marketing,AIDB,public,mkt_,active
-agent_builder,builder,vizion-agent-builder,/root/VizionAI/WORKSPACES/vizion-agent-builder,git@github.com:VizionCorpAI/vizion-agent-builder.git,agent_builder,AIDB,public,agent_,active
+agent_builder,builder,vizion-onboarding,/root/VizionAI/WORKSPACES/vizion-onboarding,git@github.com:VizionCorpAI/vizion-onboarding.git,agent_builder,AIDB,public,agent_,active
 analytics,analytics,vizion-analytics,/root/VizionAI/WORKSPACES/vizion-analytics,git@github.com:VizionCorpAI/vizion-analytics.git,analytics,AIDB,public,analytics_,active
 maintenance,maintenance,vizion-maintenance,/root/VizionAI/WORKSPACES/vizion-maintenance,git@github.com:VizionCorpAI/vizion-maintenance.git,maintenance,AIDB,public,maint_,active
 alert_reporting,alert,vizion-alert-reporting,/root/VizionAI/WORKSPACES/vizion-alert-reporting,git@github.com:VizionCorpAI/vizion-alert-reporting.git,alert_reporting,AIDB,public,alert_,active
@@ -220,7 +220,7 @@ INSERT INTO workspace_repo_registry (
   ('trading','trading','profitgtx','/root/VizionAI/AGENTS/TRADING/REPO','git@github.com:sahrxvision/profitgtx.git','trading','AIDB','public','trade_','active'),
   ('scheduling','scheduling','vizion-scheduling','/root/VizionAI/WORKSPACES/vizion-scheduling','git@github.com:sahrxvision/vizion-scheduling.git','scheduling','AIDB','public','sched_','active'),
   ('marketing','marketing','vizion-marketing','/root/VizionAI/WORKSPACES/vizion-marketing','git@github.com:sahrxvision/vizion-marketing.git','marketing','AIDB','public','mkt_','active'),
-  ('agent_builder','builder','vizion-agent-builder','/root/VizionAI/WORKSPACES/vizion-agent-builder','git@github.com:sahrxvision/vizion-agent-builder.git','agent_builder','AIDB','public','agent_','active'),
+  ('agent_builder','builder','vizion-onboarding','/root/VizionAI/WORKSPACES/vizion-onboarding','git@github.com:sahrxvision/vizion-onboarding.git','agent_builder','AIDB','public','agent_','active'),
   ('analytics','analytics','vizion-analytics','/root/VizionAI/WORKSPACES/vizion-analytics','git@github.com:sahrxvision/vizion-analytics.git','analytics','AIDB','public','analytics_','active')
 ON CONFLICT (workspace_key) DO UPDATE
 SET agent_key = EXCLUDED.agent_key,
@@ -243,7 +243,7 @@ total 48
 drwxr-xr-x 12 ubuntu ubuntu 4096 Feb 15 07:17 .
 drwxr-xr-x  9 ubuntu ubuntu 4096 Feb 13 09:35 ..
 drwxr-xr-x 11 ubuntu ubuntu 4096 Feb 13 09:35 metals-desk-os
-drwxr-xr-x  3 ubuntu ubuntu 4096 Feb 15 07:16 vizion-agent-builder
+drwxr-xr-x  3 ubuntu ubuntu 4096 Feb 15 07:16 vizion-onboarding
 drwxr-xr-x  3 ubuntu ubuntu 4096 Feb 15 07:17 vizion-alert-reporting
 drwxr-xr-x  3 ubuntu ubuntu 4096 Feb 15 07:17 vizion-analytics
 drwxr-xr-x  3 ubuntu ubuntu 4096 Feb 15 07:17 vizion-maintenance
